--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Header Section -->
     <header>
         <div>
-            <h3>Poké Search</h1>
+            <h3>Poké Search Mo</h1>
         </div>
         <nav>
             <ul>
